tests/ui/pattern/rfc-3627-match-ergonomics-2024/experimental/ref-binding-on-inh-ref-errors.classic2024.stderr
error[E0308]: mismatched types
  --> $DIR/ref-binding-on-inh-ref-errors.rs:60:10
   |
LL |     let [&mut ref x] = &[&mut 0];
   |          ^^^^^
   |
   = note: cannot match inherited `&` with `&mut` pattern
help: replace this `&mut` pattern with `&`
   |
LL -     let [&mut ref x] = &[&mut 0];
LL +     let [&ref x] = &[&mut 0];
   |

error: explicit binding modifiers may not be written within elided reference patterns
  --> $DIR/ref-binding-on-inh-ref-errors.rs:73:10
   |
LL |     let [ref mut x] = &[0];
   |          ^^^^^^^ explicit binding modifier not allowed within elided reference pattern
   |
   = note: for more information, see <https://doc.rust-lang.org/edition-guide/rust-2024/match-ergonomics.html>
note: matching on a reference type with a non-reference pattern makes variables within bind by reference
  --> $DIR/ref-binding-on-inh-ref-errors.rs:73:9
   |
LL |     let [ref mut x] = &[0];
   |         ^^^^^^^^^^^ this matches on a reference type `&_` without a reference pattern
help: make the elided reference pattern explicit
   |
LL |     let &[ref mut x] = &[0];
   |         +

error[E0596]: cannot borrow data in a `&` reference as mutable
  --> $DIR/ref-binding-on-inh-ref-errors.rs:73:10
   |
LL |     let [ref mut x] = &[0];
   |          ^^^^^^^^^ cannot borrow as mutable

error: explicit binding modifiers may not be written within elided reference patterns
  --> $DIR/ref-binding-on-inh-ref-errors.rs:81:10
   |
LL |     let [ref x] = &[0];
   |          ^^^ explicit binding modifier not allowed within elided reference pattern
   |
   = note: for more information, see <https://doc.rust-lang.org/edition-guide/rust-2024/match-ergonomics.html>
note: matching on a reference type with a non-reference pattern makes variables within bind by reference
  --> $DIR/ref-binding-on-inh-ref-errors.rs:81:9
   |
LL |     let [ref x] = &[0];
   |         ^^^^^^^ this matches on a reference type `&_` without a reference pattern
help: make the elided reference pattern explicit
   |
LL |     let &[ref x] = &[0];
   |         +

error: explicit binding modifiers may not be written within elided reference patterns
  --> $DIR/ref-binding-on-inh-ref-errors.rs:85:10
   |
LL |     let [ref x] = &mut [0];
   |          ^^^ explicit binding modifier not allowed within elided reference pattern
   |
   = note: for more information, see <https://doc.rust-lang.org/edition-guide/rust-2024/match-ergonomics.html>
note: matching on a reference type with a non-reference pattern makes variables within bind by reference
  --> $DIR/ref-binding-on-inh-ref-errors.rs:85:9
   |
LL |     let [ref x] = &mut [0];
   |         ^^^^^^^ this matches on a reference type `&mut _` without a reference pattern
help: make the elided reference pattern explicit
   |
LL |     let &mut [ref x] = &mut [0];
   |         ++++

error: explicit binding modifiers may not be written within elided reference patterns
  --> $DIR/ref-binding-on-inh-ref-errors.rs:89:10
   |
LL |     let [ref mut x] = &mut [0];
   |          ^^^^^^^ explicit binding modifier not allowed within elided reference pattern
   |
   = note: for more information, see <https://doc.rust-lang.org/edition-guide/rust-2024/match-ergonomics.html>
note: matching on a reference type with a non-reference pattern makes variables within bind by reference
  --> $DIR/ref-binding-on-inh-ref-errors.rs:89:9
   |
LL |     let [ref mut x] = &mut [0];
   |         ^^^^^^^^^^^ this matches on a reference type `&mut _` without a reference pattern
help: make the elided reference pattern explicit
   |
LL |     let &mut [ref mut x] = &mut [0];
   |         ++++

error: aborting due to 6 previous errors

Some errors have detailed explanations: E0308, E0596.
For more information about an error, try `rustc --explain E0308`.
